投稿確認画面、投稿編集画面、ユーザー情報更新ページ実装

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -24,8 +24,13 @@
         <%= entry.user.user_name %>
       <% end %>
 
-      <%= link_to entry_path(entry.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } do %>
-        <%= icon 'fas', 'trash' %>
+      <% if current_user.id == entry.user_id %>
+        <%= link_to edit_entry_path(entry.id) do %>
+          <%= icon 'fas', 'pen' %>
+        <% end %>
+        <%= link_to entry_path(entry.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } do %>
+          <%= icon 'fas', 'trash' %>
+        <% end %>
       <% end %>
 
       <div class="entry_image">
