--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -27,11 +27,14 @@
       <%= @entry.user.user_name %>
     <% end %>
   </div>
-  <div class="show_delete">
+  <% if current_user.id == @entry.user_id %>
+    <%= link_to edit_entry_path(@entry.id) do %>
+      <%= icon 'fas', 'pen' %>
+    <% end %>
     <%= link_to entry_path(@entry.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } do %>
       <%= icon 'fas', 'trash' %>
     <% end %>
-  </div>
+  <% end %>
 
   <div class="show_comment">
     <% if @entry.content.present? %>
@@ -57,6 +60,13 @@
           <% end %>
           <%= reply.content %>
           <%= time_ago_in_words(reply.created_at)+'前' %>
+          <% if current_user.id == reply.user_id %>
+            <div class="reply_delete">
+              <%= link_to entry_path(@entry.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } do %>
+                <%= icon 'fas', 'trash' %>
+              <% end %>
+            </div>
+          <% end %>
           <div class="reply_good">
             <% rep_good = current_user.reply_goods.find_by(reply_id: reply.id) %>
             <% if rep_good.blank? %>
@@ -108,6 +118,8 @@
     <% good_users = @entry.good_users %>
     <% if good_users.present? %>
       <%= "いいね！#{good_users.count}件" %>
+    <% else %>
+      <%= '「いいね！」した人はまだいません' %>
     <% end %>
   </div>
 
