--- a/app/views/entries/confirm.html.erb
+++ b/app/views/entries/confirm.html.erb
@@ -7,7 +7,9 @@
   <div class="confirm_content_area">
     <%= @entry.content %>
   </div>
+  <%= f.hidden_field :image %>
   <%= f.hidden_field :image_cache %>
+  <%= f.hidden_field :content %>
   <%= f.submit '戻る', name: 'back' %>
   <%= f.submit '投稿' %>
 <% end %>
