--- a/app/views/entries/confirm.html.erb
+++ b/app/views/entries/confirm.html.erb
@@ -1,15 +1,23 @@
-<h3>以下の内容で投稿してよろしいですか？</h3>
+<div class="container">
+  <div class="confirm">
+    <h3>以下の内容で投稿してよろしいですか？</h3>
 
-<%= form_with(model: @entry, local: true) do |f| %>
-  <div class="confirm_image_area">
-    <%= image_tag @entry.image.url if @entry.image && @entry.image.url %>
+    <%= form_with(model: @entry, local: true) do |f| %>
+      <div class="confirm_image_area">
+        <%= image_tag @entry.image.url if @entry.image && @entry.image.url %>
+      </div>
+      <div class="confirm_content_area">
+        <%= @entry.content %>
+        <%= f.hidden_field :image %>
+        <%= f.hidden_field :image_cache %>
+        <%= f.hidden_field :content %>
+      </div>
+      <span class="btn_back">
+        <%= f.submit '戻る', name: 'back' %>
+      </span>
+      <span class="btn_send">
+        <%= f.submit '投稿' %>
+      </span>
+    <% end %>
   </div>
-  <div class="confirm_content_area">
-    <%= @entry.content %>
-  </div>
-  <%= f.hidden_field :image %>
-  <%= f.hidden_field :image_cache %>
-  <%= f.hidden_field :content %>
-  <%= f.submit '戻る', name: 'back' %>
-  <%= f.submit '投稿' %>
-<% end %>
+</div>
