--- a/app/views/users/confirm.html.erb
+++ b/app/views/users/confirm.html.erb
@@ -1,32 +1,34 @@
-<h3>以下の内容で登録してよろしいですか？</h3>
-<%= form_with(model: @user, local: true, url: users_path) do |f| %>
-  <%= f.hidden_field :email %>
-  <%= f.hidden_field :name %>
-  <%= f.hidden_field :user_name %>
-  <%= f.hidden_field :password %>
+<div class="confirm">
+  <h3>以下の内容で登録してよろしいですか？</h3>
+  <%= form_with(model: @user, local: true, url: users_path) do |f| %>
+    <%= f.hidden_field :email %>
+    <%= f.hidden_field :name %>
+    <%= f.hidden_field :user_name %>
+    <%= f.hidden_field :password %>
 
-  <table>
-    <tr>
-      <td>お名前</td>
-      <td>
-        <%= @user.name %>
-      </td>
-    </tr>
-    <tr>
-      <td>ユーザーネーム</td>
-      <td>
-        <%= @user.user_name %>
-      </td>
-    </tr>
-    <tr>
-      <td>メールアドレス</td>
-      <td>
-        <%= @user.email %>
-      </td>
-    </tr>
-  </table>
-  <div class="user_confirm_button">
-    <%= f.submit '戻る', name: 'back' %>
-    <%= f.submit '登録する' %>
-  </div>
-<% end %>
+    <table>
+      <tr>
+        <td>お名前</td>
+        <td>
+          <%= @user.name %>
+        </td>
+      </tr>
+      <tr>
+        <td>ユーザーネーム</td>
+        <td>
+          <%= @user.user_name %>
+        </td>
+      </tr>
+      <tr>
+        <td>メールアドレス</td>
+        <td>
+          <%= @user.email %>
+        </td>
+      </tr>
+    </table>
+    <div class="user_confirm_button">
+      <%= f.submit '戻る', name: 'back' %>
+      <%= f.submit '登録する' %>
+    </div>
+  <% end %>
+</div>
