--- a/app/views/users/saved.html.erb
+++ b/app/views/users/saved.html.erb
@@ -1,37 +1,11 @@
-<header>
-  <%= link_to entries_path do %>
-    <%= icon 'fab', 'instagram' %>
-    <%= '|' %>
-    <%= image_tag 'https://fontmeme.com/permalink/200109/23a93f3d238949f77b4e6ed79577bcc1.png', class: 'header_logo' %>
-  <% end %>
-
-  <%= link_to 'new post',new_entry_path %>
-
-  <%= link_to user_path(current_user.id) do %>
-    <% if current_user.id == @user.id %>
-      <%= icon 'fas', 'user' %>
-    <% else %>
-      <%= icon 'far', 'user' %>
-    <% end %>
-  <% end %>
-</header>
+<%= render 'header' %>
 
 <div class="user_header">
   <div class="user_header_left">
-    <% if current_user.id == @user.id %>
-      <%= link_to user_icon_user_path(@user.id) do %>
-        <% if @user.user_image.blank? %>
-          <%= icon 'fas', 'user-circle' %>
-        <% else %>
-          <%= image_tag @user.user_image.url %>
-        <% end %>
-      <% end %>
+    <% if @user.user_image.blank? %>
+      <%= icon 'fas', 'user-circle' %>
     <% else %>
-      <% if @user.user_image.blank? %>
-        <%= icon 'fas', 'user-circle' %>
-      <% else %>
-        <%= image_tag @user.user_image.url %>
-      <% end %>
+      <%= image_tag @user.user_image.url %>
     <% end %>
   </div>
   <div class="user_header_right">
